--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 								<h4>Alexander Ciaravino</h4>
 								<p>Short bio here. Lorem ipsum dolor sit amet, consectetur adipiscing elit. In rutrum efficitur imperdiet. Morbi nibh turpis, posuere ac fermentum ac, tincidunt sit amet tortor.</p>
 								<p>
-									<a href="http://alexanderciaravino.com" target="_blank">This is a link</a> <a href="http://binghamton.edu" target="_blank">This is another link</a> <a href="http://binghamton.edu" target="_blank">Third link</a>
+									<a href="http://alexanderciaravino.com" target="_blank">Photography Website</a> <a href="http://binghamton.edu" target="_blank">This is another link</a> <a href="http://binghamton.edu" target="_blank">Third link</a>
 								</p>
 							</div>
 						</div>
