--- a/index.html
+++ b/index.html
@@ -28,13 +28,13 @@
 							<h3>ARTS 412<br />
 							Graphic Design Software II</h3>
 							<div class="half">
-								<img class="r-image" src="images/Hexagons.png" title="Hexagons" />
+								<img class="r-image" src="images/Website_photo.png" title="Website_photo" />
 							</div>
 							<div class="half">
 								<h4>Alexander Ciaravino</h4>
-								<p>Short bio here. Lorem ipsum dolor sit amet, consectetur adipiscing elit. In rutrum efficitur imperdiet. Morbi nibh turpis, posuere ac fermentum ac, tincidunt sit amet tortor.</p>
+								<p>Alex is a graphic design major at Binghamton University, a father, and a Marine Veteran. Upon graduating, Alex intends on pursuing adventure photography and brewing, using graphic design to promote these ventures.</p>
 								<p>
-									<a href="http://alexanderciaravino.com" target="_blank">Photography Website</a> <a href="http://binghamton.edu" target="_blank">This is another link</a> <a href="http://binghamton.edu" target="_blank">Third link</a>
+									<a href="http://alexanderciaravino.com" target="_blank">Photography Website</a> <a href="http://instagram.com/alexanderexcursion" target="_blank">Instagram Account</a> <a href="http://binghamton.edu" target="_blank">Third link</a>
 								</p>
 							</div>
 						</div>
@@ -107,7 +107,7 @@
 		</div>
 
 		<div id="footer">
-			<p>©2020 Firstname Lastname | Binghamton University</p>
+			<p>©2020 Alexander Ciaravino | Binghamton University</p>
 		</div>
 
 	</body>
