--- a/book-32.html
+++ b/book-32.html
@@ -46,7 +46,7 @@
 
 				<div class="width-8-12-m width-8-12">
 
-					<img class="nice-image" src="images/Movie_Typography-08.jpg" title= Riddle Me This>
+					<img class="nice-image" src="images/Page30.png" title= Riddle Me This>
 
 				</div>
 
