--- a/index.html
+++ b/index.html
@@ -50,7 +50,16 @@
 				</div>
 
 				<div class="width-6-12-m width-4-12 thumb">
-					<img class="r-image" src="https://via.placeholder.com/600" title="image title" />
+					<img class="r-image" src="images/tron_draft.png" title="Tron Draft" />
+					<div class="body">
+						<h1>Project 1:  Ipsum Lorem</h1>
+						<p><img class="r-image" src="https://via.placeholder.com/1600x900"></p>
+						<p>This is the first digital draft of Tron that I created. Later down the road, I would end up scrapping the R and N, as well as change the design of the T in the background. 
+						</p>
+					</div>
+				</div>
+				<div class="width-6-12-m width-4-12 thumb">
+					<img class="r-image" src="images/page23.png" title="Tron Final Draft" />
 					<div class="body">
 						<h1>Project 1:  Ipsum Lorem</h1>
 						<p><img class="r-image" src="https://via.placeholder.com/1600x900"></p>
@@ -59,19 +68,10 @@
 					</div>
 				</div>
 				<div class="width-6-12-m width-4-12 thumb">
-					<img class="r-image" src="https://via.placeholder.com/600" title="image title" />
+					<img class="r-image" src="images/pixelart_backpack.png" title="Pixel Hiking Backpack" />
 					<div class="body">
 						<h1>Project 1:  Ipsum Lorem</h1>
-						<p><img class="r-image" src="https://via.placeholder.com/1600x900"></p>
-						<p>Add a short description here. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent ex magna, blandit nec viverra faucibus, placerat convallis ipsum. Cras semper ipsum eget ullamcorper ultricies. Curabitur sit amet justo eu sapien molestie bibendum id in enim. Integer semper risus eget nibh eleifend, at vulputate risus laoreet. 
-						</p>
-					</div>
-				</div>
-				<div class="width-6-12-m width-4-12 thumb">
-					<img class="r-image" src="https://via.placeholder.com/600" title="image title" />
-					<div class="body">
-						<h1>Project 1:  Ipsum Lorem</h1>
-						<p><img class="r-image" src="https://via.placeholder.com/1600x900"></p>
+						<p><img class="r-image" src="images/pixelart_backpack.png"></p>
 						<p>Add a short description here. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent ex magna, blandit nec viverra faucibus, placerat convallis ipsum. Cras semper ipsum eget ullamcorper ultricies. Curabitur sit amet justo eu sapien molestie bibendum id in enim. Integer semper risus eget nibh eleifend, at vulputate risus laoreet. 
 						</p>
 					</div>
