Revise Digital Book

--- a/book-27.html
+++ b/book-27.html
@@ -37,7 +37,7 @@
 
 					<div class="flex-content">
 						<div class="book-nav vertically-centered"> 
-							<a href="Riddle-Book.html"> <img src="images/Nav-Arrow-Left.svg" /></a>
+							<a href="book-26.html"> <img src="images/Nav-Arrow-Left.svg" /></a>
 						</div>
 					</div>
 
@@ -55,7 +55,7 @@
 					
 					<div class="flex-content">
 						<div class="book-nav vertically-centered"> 
-							<a href="book-2.html"> <img src="images/Nav-Arrow-Right.svg" /></a>
+							<a href="book-28.html"> <img src="images/Nav-Arrow-Right.svg" /></a>
 						</div>
 					</div>
 
