--- a/book-39.html
+++ b/book-39.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<title>ARTS XXX Journal | Firstname Lastname</title>
+		<title>ARTS 412 Journal | Firstname Lastname</title>
 		<link rel="stylesheet" href="css/normalize.css">
 		<link rel="stylesheet" href="css/grid-utils.css">
 		<link rel="stylesheet" href="css/style.css">
@@ -37,7 +37,7 @@
 
 					<div class="flex-content">
 						<div class="book-nav vertically-centered"> 
-							<a href="Riddle-Book.html"> <img src="images/Nav-Arrow-Left.svg" /></a>
+							<a href="book-38.html"> <img src="images/Nav-Arrow-Left.svg" /></a>
 						</div>
 					</div>
 
@@ -55,7 +55,7 @@
 					
 					<div class="flex-content">
 						<div class="book-nav vertically-centered"> 
-							<a href="book-2.html"> <img src="images/Nav-Arrow-Right.svg" /></a>
+							<a href="Riddle-Book.html"> <img src="images/Nav-Arrow-Right.svg" /></a>
 						</div>
 					</div>
 
