--- a/book-2.html
+++ b/book-2.html
@@ -46,7 +46,7 @@
 
 				<div class="width-8-12-m width-8-12">
 
-					<img class="nice-image" src="images/page1.png" title= Riddle Me This>
+					<img class="nice-image" src="images/creditspage.png" title= Riddle Me This>
 
 				</div>
 
