--- a/book-29.html
+++ b/book-29.html
@@ -37,7 +37,7 @@
 
 					<div class="flex-content">
 						<div class="book-nav vertically-centered"> 
-							<a href="Riddle-Book.html"> <img src="images/Nav-Arrow-Left.svg" /></a>
+							<a href="book-28.html"> <img src="images/Nav-Arrow-Left.svg" /></a>
 						</div>
 					</div>
 
@@ -46,7 +46,7 @@
 
 				<div class="width-8-12-m width-8-12">
 
-					<img class="nice-image" src="images/Page27.png" title= Riddle Me This>
+					<img class="nice-image" src="images/page27.png" title= Riddle Me This>
 
 				</div>
 
@@ -55,7 +55,7 @@
 					
 					<div class="flex-content">
 						<div class="book-nav vertically-centered"> 
-							<a href="book-2.html"> <img src="images/Nav-Arrow-Right.svg" /></a>
+							<a href="book-30.html"> <img src="images/Nav-Arrow-Right.svg" /></a>
 						</div>
 					</div>
 
